# writer

./: .env  Dockerfile  README.md  adapter.py  docker-compose.override.yml  docker-compose.test.yml  docker-compose.yml  pyproject.toml  requirements.txt  routes.py  sensor_measurements.storage.py
src/writer/: adapter.py  main.py  routes.py
tests/: conftest.py  test_adapter.py  test_routes.py
