[project]
name = "writer"
version = "0.1.0"
description = "Implementation of a simple service that stores sensor measurements"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.5",
    "asyncpg>=0.29.0",
    "ruff>=0.6.1",
    "pydantic>=2.8.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
my_app = "src.writer.main:main"

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-aiohttp>=1.0.5",
]
