[project]
name = "writer"
version = "0.1.0"
description = "Implementation of a simple service that stores sensor measurements"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "aiohttp>=3.10.5",
    "asyncpg>=0.29.0",
    "pydantic>=2.8.2",
    "pytest-asyncio==0.24.0",
    "aiohttp-swagger>=1.0.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/writer"]

[tool.uv]
dev-dependencies = [
    "pytest>=8.3.2",
    "pytest-aiohttp>=1.0.5",
]
